# che

che_nav_ws/: auto_nav.sh  hokuyo_laser.sh
che_nav_ws/src/chuan_bringup/: CMakeLists.txt
che_nav_ws/src/chuan_bringup/launch/: tf_odom_fake.launch
che_nav_ws/src/chuan_bringup/src/: odom_fake.cpp  tf_changemap11.cpp  tf_changemaptd11.cpp
che_nav_ws/src/chuan_bringup/urdf/: chuan.urdf.xacro
che_nav_ws/src/chuan_navigation/launch/: nav_chuan_hokuyo.launch  nav_hokuyo_movebase.launch
che_nav_ws/src/chuan_navigation/param/: costmap_common_params.yaml
che_nav_ws/src/navigation-kinetic-devel/rrt_planner/launch/: turtlebot_in_stage.launch
che_nav_ws/src/navigation-kinetic-devel/rrt_planner/map/: maze.yaml
che_nav_ws/src/navigation-kinetic-devel/rrt_planner/src/: rrt.h  rrt_planner.cpp
che_nav_ws/src/turtlebot_viz-indigo/turtlebot_rviz_launchers/rviz/: navigation.rviz
che_ws/: che_modbus.sh  turtlebot_key.sh  usb2485.rules
che_ws/src/sinebot_bringup/: CMakeLists.txt  package.xml
che_ws/src/sinebot_bringup/include/: sineBot_base.h
che_ws/src/sinebot_bringup/launch/: sinebot_bringup.launch
che_ws/src/sinebot_bringup/src/: get_vel.cpp  sinebot_base.cpp
che_ws/src/sinebot_bringup/src/main/: sinebot_base_node.cpp
